--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
 .App {
-  text-align: center;
+  background-color: aliceblue;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* .card {
+  backdrop-filter: blur(2px) saturate(181%);
+  -webkit-backdrop-filter: blur(12px) saturate(181%);
+  background-color: rgba(255, 255, 255, 0.58);
+  border-radius: 12px;
+  border: 2px solid rgba(209, 213, 219, 0.3);
+  
+} */
+.btn {
+  margin-left: 31%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary-container {
+  /* background-color: azure; */
+  height: 100vh;
 }
